--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,6 @@ jobs:
     # Also test for some other versions
     # <<: is the extend operator = add all fields and extend or modify them afterwards
     # without extend operator only exact copies are possible
-    - <<: *tests    # Alias for anchor defined above
-      python: 3.5
+
+    #- <<: *tests    # Alias for anchor defined above
+    #  python: 3.5
