Change deprecated asyncio loop start and ignore warnings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,3 +23,6 @@ venvPath = "."
 [tool.pytest.ini_options]
 asyncio_default_fixture_loop_scope = "function"
 asyncio_mode = "auto"
+filterwarnings = [
+  "ignore::DeprecationWarning:botocore.*",
+]
