--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,6 +1,9 @@
+# Tests
 pytest==8.4.1
 pytest-asyncio==1.1.0
 pytest-cov==6.0.0
+
+# AWS CDK
 aws-cdk-lib==2.166.0
 constructs==10.4.2
 python-dotenv==1.1.1
