Activate tests in pipeline and dependabot automerge

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,14 +1,20 @@
 version: 2
 updates:
-  - package-ecosystem: "pip" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  - package-ecosystem: "pip"
+    directory: "/"
     schedule:
       interval: "weekly"
+    pull-request-branch-name:
+      separator: "/"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "weekly"
+    pull-request-branch-name:
+      separator: "/"
   - package-ecosystem: "docker"
     directory: "/"
     schedule:
       interval: "weekly"
+    pull-request-branch-name:
+      separator: "/"
