--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,5 @@
-name: Tests
+name: PR Checks
+
 on:
   push:
     branches: [master]
@@ -13,7 +14,6 @@ jobs:
         image: amazon/dynamodb-local:latest
         ports:
           - 8000:8000
-
     steps:
       - uses: actions/checkout@v6
 
@@ -25,15 +25,31 @@ jobs:
           cache-dependency-path: |
             requirements.txt
             requirements-dev.txt
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install -r requirements-dev.txt
-
       - name: Run tests
-        run: |
-          python -m pytest tests --no-cov
+        run: python -m pytest tests --no-cov
         env:
           TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+
+  automerge-dependabot:
+    if: github.event.pull_request.user.login == 'dependabot[bot]'
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+      - name: Fetch Dependabot metadata
+        id: metadata
+        uses: dependabot/fetch-metadata@v2
+        with:
+          github-token: "${{secrets.GITHUB_TOKEN}}"
+
+      - name: Enable auto-merge (if Dependabot PR)
+        if: |
+          steps.metadata.outputs.update-type == 'version-update:semver-patch' ||
+          steps.metadata.outputs.update-type == 'version-update:semver-minor'
+        run: gh pr merge --squash "${{github.event.pull_request.html_url}}"
+        env:
+          GH_TOKEN: ${{secrets.GITHUB_TOKEN}}
