Add missing permissions to workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [master]
 
+permissions:
+  contents: write # needed for merging
+  pull-requests: write # needed for enabling auto-merge
+
 jobs:
   tests:
     runs-on: ubuntu-latest
